Fix operation ids and client methods
